moving to java 21